@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-05T02:04:27Z",
-  "count_outdated" : 0,
-  "uniques_outdated" : 0,
+  "timestamp" : "2022-09-15T08:28:16Z",
+  "count_outdated" : 3,
+  "uniques_outdated" : 2,
   "count" : 4,
   "uniques" : 3,
   "views" : [
-    {
-      "timestamp": "2022-09-01T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
     {
       "timestamp": "2022-09-04T00:00:00Z",
       "count": 1,
