@@ -1,12 +1,7 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 1,
+  "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-09-01T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-09-04T00:00:00Z",
       "count": 1,
