@@ -1,3 +1,11 @@
+2022-09-15T08:28:16Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3058924682
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 3 4
+* notice: next accum: outdated-unq outdated-all / unq all: 2 3 / 3 4
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-01] / []
+
 2022-09-05T02:04:27Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2990366847
 * notice: last 14d: unq all: 3 4
